Fix alignment in primitivePanel

--- a/src/components/PrimitivePanel/PrimitivePanel.scss
+++ b/src/components/PrimitivePanel/PrimitivePanel.scss
@@ -4,6 +4,7 @@
   min-height: 48px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: .5rem .5rem;
   background: #FFF;
   border: 1px solid $color-lightgray;
